# prima_pagina

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Features.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_users_sessions.py  0002_feeds_categories.py  0003_articles.py  0004_llm_configs.py  0005_virtual_feeds_digests.py  0006_plugin_configs.py  0007_llm_timeout.py  0008_votes_llmdata_scripts_invitations.py  0009_fulltext_include_images.py
backend/app/: __init__.py  config.py  database.py  limiter.py  main.py  types.py
backend/app/api/: admin.py  articles.py  auth.py  categories.py  deps.py  digest.py  feeds.py  search.py  virtual_feeds.py
backend/app/middleware/: security.py
backend/app/models/: __init__.py  article.py  article_llm_data.py  article_user_state.py  article_vote.py  category.py  digest.py  feed.py  feed_extraction_script.py  llm_config.py  plugin_config.py  session.py  user.py  user_feed.py  (+3 more)
backend/tests/: conftest.py  test_articles_api.py  test_auth.py  test_categories.py  test_digest.py  test_digest_errors.py  test_extraction_script.py  test_feed_fetcher.py  test_feeds.py  test_full_text.py  test_full_text_extended.py  test_health.py  test_invitations.py  test_llm_claude.py  test_llm_ollama.py  test_plugin_base.py  test_plugin_telegram.py  test_ranking.py  test_ranking_updated.py  test_related_articles.py  test_rss_generator.py  test_scheduler.py  test_search.py  test_tagging.py  test_virtual_feeds.py  test_votes.py
(+148 files in other folders)
