[project]
name = "prima-pagina-backend"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "pydantic[email]>=2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "cryptography>=42",
    "slowapi>=0.1.9",
    "bleach>=6.1",
    "bcrypt>=4.1",
    "apscheduler>=3.10,<4",
    "feedparser>=6.0",
    "langdetect>=1.0",
    "trafilatura>=2.0.0",
    "anthropic>=0.28",
    "babel>=2.15",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-cov>=5",
    "respx>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
